doc/v1.0/index.md
# Yamato v1.0 コントラクト

以下は、v1.0 で使用されている最新バージョンのコントラクトのリストです。

## デプロイされているコントラクト

- `CJPY.sol`
- `CurrencyOSV2.sol` - CurrencyOS の最新バージョン
- `FeePool.sol`
- `PoolV2.sol` - Pool の最新バージョン
- `PriceFeedV3.sol` - PriceFeed の最新バージョン
- `PriorityRegistryV6.sol` - PriorityRegistry の最新バージョン
- `YamatoBorrower.sol` - YamatoBorrower の最新バージョン
- `YamatoDepositorV2.sol` - YamatoDepositor の最新バージョン
- `YamatoRedeemerV4.sol` - YamatoRedeemer の最新バージョン
- `YamatoRepayerV2.sol` - YamatoRepayer の最新バージョン
- `YamatoSweeperV2.sol` - YamatoSweeper の最新バージョン
- `YamatoV3.sol` - Yamato の最新バージョン
- `YamatoWithdrawerV2.sol` - YamatoWithdrawer の最新バージョン

## 利用していないものや、テスト用コントラクト

- `Currency.sol` - 未デプロイ 継承コントラクト
- `Vester.sol` - 未デプロイ
- `VesterFactory.sol` - 未デプロイ
- `YMT.sol` - 未デプロイ
- `YmtOS.sol` - 未デプロイ
- `veYMT.sol` - 未デプロイ
- `Import.sol` - アップグレーダブル proxy テスト用
- `ChainLinkMock.sol` - テスト用
- `TellorCallerMock.sol` - テスト用
